Remove width and height for cart image to avoid stretching

--- a/app/assets/stylesheets/soldstyles/_navigation.scss
+++ b/app/assets/stylesheets/soldstyles/_navigation.scss
@@ -169,8 +169,6 @@ $s3_url: "https://s3-ap-southeast-1.amazonaws.com/gamers.ph.bckt/spree_sold_them
         margin-bottom: 10px;
         a {padding: 0}
         img {
-          width: 80px;
-          height: 60px;
           margin: 0;
           padding: 0
         }
